# 2048-game

./: .gitignore  2048game_2.py  README.md  cli_2048_not_ai.py  cyclic_2048_ai.py  log.md  ntuple_2048_ai.py  ntuple_ai_run.sh  old_readme.md  pyproject.toml
cpp_ai/: Makefile  board.hpp  main.cpp  ntuple.hpp  run.sh  types.hpp
