[project]
name = "2048-game"
version = "0.1.0"
description = ""
authors = [
    {name = "zhiyuan",email = "zhiryuan@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "torch (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
